update the bug overflow cv

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@
   box-sizing: border-box;
 }
 
+html {
+  /* overflow-x: hidden; */
+}
 
 body {
   margin: 0px;
+  overflow-x: hidden;
 }
